# mastercardConvert

./: .gitignore  LICENSE  Pipfile  README.md  mastercardConvert.py  mastercardExample.xml  mastercardExampleFormatted.xml  pyproject.toml  requirements.txt
domain/: date.py  transaction.py
mc/: cli.py
mc/domain/: date.py  transaction.py
mc/repository/: mastercard.py
mc/tests/domain/: test_transaction.py
mc/tests/repository/: test_mastercard.py
repository/: mastercard.py
tests/domain/: test_transaction.py
tests/repository/: test_mastercard.py
